--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Just Java</string>
+    <string name="name">Name</string>
+    <string name="toppings">Toppings</string>
+    <string name="whipped_cream">Whipped Cream</string>
+    <string name="chocolate">Chocolate</string>
+    <string name="quantity">QUANTITY</string>
+    <string name="order_summary">ORDER SUMMARY</string>
+    <string name="add_whipped_cream">Add whipped Cream?</string>
+    <string name="add_chocolate">Add chocolate?</string>
+    <string name="True">true</string>
+    <string name="False">false</string>
+    <string name="total">Total</string>
+    <string name="thank_you">Thank You!</string>
+    <string name="order">ORDER</string>
+    <string name="welcome">Welcome!</string>
 </resources>
